# modorganizer-preview_nif

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  plugindefinition.json
.github/workflows/: build.yml
data/shaders/: NIFSKOPE LICENSE.md  default.vert  fo4_default.frag  fo4_effectshader.frag  sk_default.frag  sk_default.vert  sk_effectshader.frag  sk_effectshader.vert  sk_msn.frag  sk_msn.vert  sk_multilayer.frag
src/: CMakeLists.txt  Camera.cpp  Camera.h  NifExtensions.h  NifWidget.cpp  NifWidget.h  OpenGLShape.cpp  OpenGLShape.h  PreviewNif.cpp  PreviewNif.h  ShaderManager.cpp  ShaderManager.h  TextureManager.cpp  TextureManager.h  preview_nif_en.ts
